--- a/paper/main.qmd
+++ b/paper/main.qmd
@@ -133,23 +133,23 @@ for other researchers to work with, thereby facilitating replication while also
 making initial development more convenient.
 
 Bibat integrates many widely-adopted, open-source and powerful tools to
-implement the components of a Bayesian workflow. Bibat projects are is
-written in modern Python and uses pydantic @pydanticdevelopersPydantic2022
+implement the components of a Bayesian workflow. Bibat projects are  written
+in modern Python and uses pydantic [@pydanticdevelopersPydantic2022]
 and pandera [@niels_bantilan-proc-scipy-2020] for data modelling, Stan
 [@carpenterStanProbabilisticProgramming2017] for statistical inference,
 cmdstanpy [@standevelopmentteamCmdStanPy2022] for python-Stan interface, arviz
 [@kumarArviZUnifiedLibrary2019] for storing and analyzing inferences and sphinx
 [@georgbrandlandthesphinxteamSphinx2022] and quarto [@Allaire_Quarto_2022]
 for documentation.  Bibat itself is also written in modern Python and uses the
-popular tools cookiecutter [@greenfeldCookiecutter2021], pydantic and click
-[@clickdevelopersClickPythonComposable2022].
+previously mentioned software as well as the popular  popular template tool
+copier [@copierdevelopersCopier2024].
 
 To encourage collaborative development of Bayesian workflow projects, Bibat
 projects include a preconfigured test environment, continuous integration,
 linting and pre-commit hooks. In addition, including documentation as a
 first class component of the analysis addresses a common problem in academic
-statistics projects where the paper gets out of sync with the code. Bibat itself
-is continuously tested to ensure that it works on the operating systems Linux,
+statistics projects where the paper gets out of sync with the code. Bibat is
+continuously tested to ensure that it works on the operating systems Linux,
 macOS and Windows. Bibat's continuous integration runs a test suite as well as
 an end-to-end functional test on all supported Python versions.
 
@@ -247,7 +247,7 @@ workflows, with different sizes, subject matters and emphases.
 
 # Community
 
-Bibat is developed in public and encourages community contribution. Please see the contributing page <https://github.com/teddygroves/bibat/blob/main/CONTRIBUTING.rst> and code of conduct <https://github.com/teddygroves/bibat/blob/main/CODE_OF_CONDUCT.md> if you would like to help develop bibat.
+Bibat is developed in public and encourages community contribution. Please see the contributing page <https://github.com/teddygroves/bibat/blob/main/CONTRIBUTING.md> and code of conduct <https://github.com/teddygroves/bibat/blob/main/CODE_OF_CONDUCT.md> if you would like to help develop bibat.
 
 Bibat has a growing user community, with 16 GitHub stars at the time of
 writing, and is affiliated with cmdstanpy through a link on its documentation
