--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,10 +1,3 @@
-@misc{drivendataCookiecutterdatascience2022,
-  title = {Cookiecutter-Data-Science},
-  author = {{Driven Data}},
-  year = {2022},
-  url = {https://github.com/drivendata/cookiecutter-data-science/}
-}
-
 @misc{salemTensorflowProjectTemplate2018,
   title = {Tensorflow-{{Project-Template}}},
   author = {Salem, Mahmoud G},
@@ -299,4 +292,17 @@
   url = {https://github.com/teddygroves/baseball},
   urldate = {2024-01-29},
   abstract = {Experimenting with extreme value distributions for sports modelling and literate programming}
+}
+
+@misc{copierdevelopersCopier2024,
+  title = {Copier},
+  author = {{copier developers}},
+  year = {2024},
+  month = feb,
+  url = {https://github.com/copier-org/copier},
+  urldate = {2024-02-15},
+  abstract = {Library and command-line utility for rendering projects templates.},
+  copyright = {MIT},
+  howpublished = {copier-org},
+  keywords = {cookiecutter,copier-template,hacktoberfest,project-template,python,scaffolding}
 }
