--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,3 +1,10 @@
+@misc{drivendataCookiecutterdatascience2022,
+  title = {Cookiecutter-Data-Science},
+  author = {{Driven Data}},
+  year = {2022},
+  url = {https://github.com/drivendata/cookiecutter-data-science/}
+}
+
 @misc{salemTensorflowProjectTemplate2018,
   title = {Tensorflow-{{Project-Template}}},
   author = {Salem, Mahmoud G},
@@ -63,14 +70,6 @@
   archiveprefix = {arXiv},
   keywords = {Statistics - Methodology},
   file = {/Users/tedgro/Documents/Reading/Zotero/storage/XEI2Q7F4/Gelman et al. - 2020 - Bayesian Workflow.pdf;/Users/tedgro/Documents/Reading/Zotero/storage/8Y5YAYXE/2011.html}
-}
-
-@misc{greenfeldCookiecutter2021,
-  title = {Cookiecutter},
-  author = {Greenfeld, Audrey Roy and Greenfeld, Dainiel Roy and Pierzina, Raphael and {others}},
-  year = {2021},
-  month = may,
-  url = {https://pypi.org/project/cookiecutter/}
 }
 
 @misc{standevelopmentteamCmdStanPy2022,
