--- a/paper/main.tex
+++ b/paper/main.tex
@@ -310,23 +310,24 @@ thereby facilitating replication while also making initial development
 more convenient.
 
 Bibat integrates many widely-adopted, open-source and powerful tools to
-implement the components of a Bayesian workflow. Bibat projects are is
-written in modern Python and uses pydantic Pydantic developers (2022)
+implement the components of a Bayesian workflow. Bibat projects are
+written in modern Python and uses pydantic (Pydantic developers 2022)
 and pandera (Niels Bantilan 2020) for data modelling, Stan (Carpenter et
 al. 2017) for statistical inference, cmdstanpy (Stan Development Team
 2022) for python-Stan interface, arviz (Kumar et al. 2019) for storing
 and analyzing inferences and sphinx (Georg Brandl and the Sphinx team
 2022) and quarto (Allaire et al. 2022) for documentation. Bibat itself
-is also written in modern Python and uses the popular tools cookiecutter
-(Greenfeld et al. 2021), pydantic and click (Click Developers 2022).
+is also written in modern Python and uses the previously mentioned
+software as well as the popular popular template tool copier (copier
+developers 2024).
 
 To encourage collaborative development of Bayesian workflow projects,
 Bibat projects include a preconfigured test environment, continuous
 integration, linting and pre-commit hooks. In addition, including
 documentation as a first class component of the analysis addresses a
 common problem in academic statistics projects where the paper gets out
-of sync with the code. Bibat itself is continuously tested to ensure
-that it works on the operating systems Linux, macOS and Windows. Bibat's
+of sync with the code. Bibat is continuously tested to ensure that it
+works on the operating systems Linux, macOS and Windows. Bibat's
 continuous integration runs a test suite as well as an end-to-end
 functional test on all supported Python versions.
 
@@ -439,8 +440,8 @@ Bayesian workflows, with different sizes, subject matters and emphases.
 
 Bibat is developed in public and encourages community contribution.
 Please see the contributing page
-\url{https://github.com/teddygroves/bibat/blob/main/CONTRIBUTING.rst}
-and code of conduct
+\url{https://github.com/teddygroves/bibat/blob/main/CONTRIBUTING.md} and
+code of conduct
 \url{https://github.com/teddygroves/bibat/blob/main/CODE_OF_CONDUCT.md}
 if you would like to help develop bibat.
 
@@ -488,9 +489,9 @@ and Allen Riddell. 2017. {``Stan: {A Probabilistic Programming
 Language}.''} \emph{Journal of Statistical Software} 76 (1): 1--32.
 \url{https://doi.org/10.18637/jss.v076.i01}.
 
-\bibitem[\citeproctext]{ref-clickdevelopersClickPythonComposable2022}
-Click Developers. 2022. {``Click: {Python} Composable Command Line
-Interface Toolkit.''} Pallets. \url{https://pypi.org/project/click/}.
+\bibitem[\citeproctext]{ref-copierdevelopersCopier2024}
+copier developers. 2024. {``Copier.''} copier-org.
+\url{https://github.com/copier-org/copier}.
 
 \bibitem[\citeproctext]{ref-drivendataCookiecutterdatascience2022}
 Driven Data. 2022. {``Cookiecutter-Data-Science.''}
@@ -512,10 +513,6 @@ Bürkner, and Martin Modrák. 2020. {``Bayesian {Workflow}.''}
 \bibitem[\citeproctext]{ref-georgbrandlandthesphinxteamSphinx2022}
 Georg Brandl and the Sphinx team. 2022. {``Sphinx.''}
 \url{https://www.sphinx-doc.org/}.
-
-\bibitem[\citeproctext]{ref-greenfeldCookiecutter2021}
-Greenfeld, Audrey Roy, Dainiel Roy Greenfeld, Raphael Pierzina, et al.
-2021. {``Cookiecutter.''} \url{https://pypi.org/project/cookiecutter/}.
 
 \bibitem[\citeproctext]{ref-grinsztajnBayesianWorkflowDisease2021}
 Grinsztajn, Léo, Elizaveta Semenova, Charles C. Margossian, and Julien
